# csheet

./: .gitignore  CheatSheet.md  Rakefile.rb  Scott.xlsx  csheet.cabal  csheet.cabal.bak  hie.yaml  index.md  pdf2cs.sh  spellhb.cabal.bak  temp.json  testSpells.html
.github/workflows/: github-actions-demo.yml
app/csheet/: Main.hs
app/pdfread/: DataMaps.hs  Main.hs
app/spell/: Main.hs
app/spellhb/: Main.hs
characters/blacktown/aeson/: aeson.1.json  aeson.2.json
characters/blacktown/justin/: justin.2.json
characters/blacktown/ros/: ros.2.json
characters/blacktown/tulio/: tulio.2.json
characters/blank/: blank.0.json
characters/blank/blank/: blank.0.json  blank.0.spells.html  blank.0.yml
characters/blank/ice/: ice.0.json
characters/dragons/brown/: brown.2.json  brown.3.json
characters/dragons/clyra/: clyra.1.json  clyra.3.json
characters/dragons/fae/: fae.1.json
characters/dragons/jet/: jet.2.json  jet.3.json
characters/dragons/kathinta/: kathinta.2.json
characters/dragons/nepthys/: nepthys.2.json
characters/dragons/pineapple/: pineapple.2.json
characters/dragons/willow/: willow.2.json
characters/dragons/zoe/: zoe.1.json  zoe.2.json  zoe.3.json
characters/inanna/: inanna.6.json  inanna.txt
characters/nocampaign/m/: m.3.json
characters/nocampaign/qitian/: Notes.md  Spells.md  qitian.20.json
characters/nocampaign/riardon/: Riardon_02.json  Sharwyn_06.json
characters/phandalin/bean/: bean.12.json  bean.3.json
characters/phandalin/ryan/: ryan.3.json  ryan.3.spells
characters/phandalin/thomas/: Report_01.docx  Report_01_A.docx  thomas.1.json  thomas.2.json  thomas.3.json  thomas.3.spells
characters/riardon/: Riardon_01.json  Riardon_03.json  Riardon_04.json  Sharwyn_04.json  Sharwyn_05.json
characters/rise/agnar/: Notes.txt  agnar.6.json  agnar.7.json  agnar.8.json  agnar.9.json  phoebe.3.json  phoebe.4.json  phoebe.5.json
characters/rise/cheery/: Notes.txt  cheery.3.json  cheery.4.json  cheery.5.json  cheery.6.json  cheery.7.json  cheery.8.json  cheery.9.json
characters/rise/inanna_o/: CreatureStats.xlsx  DOMT_Rolls.docx  Portent.docx  Spells.docx  inanna_o.6.json  inanna_o.7.json  inanna_o.8.json  inanna_o.9.json  ~$CreatureStats.xlsx  ~$MT_Rolls.docx
characters/rise/othys/: othys.6.json  othys.7.json  scott.3.json  scott.4.json  scott.5.json
characters/rise/tamlin/: Notes.txt  tamlin.6.json  tamlin.7.json  tamlin.8.json  tamlin.9.json  zoe.3.json  zoe.4.json  zoe.5.json
characters/strahd/dennis/: 30-Poisons-Tier1-2.md  30PoisonsIngedients.md  Conditions.md  dennis.5.json  dennis.6.json  dennis.7.json  dennis.8.json  dennis.8.spells.html  dennis.9.json
characters/strahd/dennis1/: dennis1.10.json  dennis1.10.spells.html  dennis1.11.json  dennis1.12.json  dennis1.12.yml  dennis1.9.json
characters/strahd/gareth/: gareth.5.json
characters/strahd/gizmo/: gizmo.1.json
characters/strahd/louie/: louie.12.json  louie.12.spells.html  louie.12.yml  louie.8.json  louie.8.spells.html  louie.9.json  raymond.txt
characters/strahd/rusty/: ArtificersGuide.md  Assistant.md  Minion.md  ModificationSummary.xlsx  Rusty's crafting.md  creations.md  gear-list.md  rusty.10.json  rusty.10.spells.html  rusty.11.json  rusty.12.json  rusty.12.yml  rusty.5.hb  rusty.5.json  rusty.6.json  rusty.7.json  rusty.8.json  rusty.8.spells.html  rusty.9.json
characters/strahd/talos/: DocsJournal.txt  TalosSpells.5.xlsx  TalosSpells.6.xlsx  talos.1.json  (+6 more)
characters/tidal/: tidal.3.json
characters/z/: z.3.json
docs/: index.md
rules/: MagicItemCrafting.md  feats-dennis.md  feats.md  lvl4spells.txt  spellsPerLevel.txt
src/: DataTypes.hs  Fonts.hs  Main.hs  Pages.hs  Utilities.hs
src/csheet/: DataTypes.hs  Fonts.hs  Main.hs  Pages.hs  Paths_HPDF.hs  Spells.hs  Utilities.hs
src/spell/: Main.hs  SpellData.hs
src/spelldata/: Cantrips.hs  FifthLevel.hs  FirstLevel.hs  FourthLevel.hs  SecondLevel.hs  SpellData.hs  SpellTypes.hs  ThirdLevel.hs
(+6 files in other folders)
