name:                csheet
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ScottSedgwick/csheet#readme
license:             BSD3
license-file:        LICENSE
author:              Scott Sedgwick
maintainer:          scott.sedgwick@gmail.com
copyright:           Copyright (c) 2018 Scott Sedgwick
category:            Investigative
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable csheet
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       DataTypes
                     , Fonts
                     , Pages
                     , Utilities
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , HPDF
