name:                csheet
version:             0.1.0.0
homepage:            https://github.com/ScottSedgwick/csheet#readme
license:             BSD3
license-file:        LICENSE
author:              Scott Sedgwick
maintainer:          scott.sedgwick@gmail.com
copyright:           Copyright (c) 2018 Scott Sedgwick
category:            Investigative
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library clib
  hs-source-dirs:      src/csheet
  exposed-modules:     DataTypes
                     , Fonts
                     , Pages
                     , Spells
                     , Utilities
  default-language:    Haskell2010
  build-depends:       base 
                     , aeson
                     , base64-bytestring
                     , binary
                     , bytestring
                     , containers
                     , errors
                     , file-embed
                     , filepath
                     , HPDF
                     , network-uri
                     , text

executable cexe
  hs-source-dirs:      app/csheet
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base 
                     , aeson
                     , base64-bytestring
                     , binary
                     , bytestring
                     , containers
                     , clib
                     , errors
                     , file-embed
                     , filepath
                     , HPDF
                     , mtl
                     , network-uri
                     , optparse-applicative
                     , text
